# crader

./: .coverage  .env.example  .gitignore  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  dev_setup.sh  index.html  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  publish-pypi.yml  publish-test-pypi.yml
contributing/code-of-conduct/: index.html
contributing/development-setup/: index.html
db/: env.py
db/versions/: 0118b4069598_initial_schema.py  452b7111e3eb_initial_schema_reconstruction.py  c7afc7db3cb4_initial_schema.py
debug_tool/: server.py  test_graph.py
debug_tool/static/: app.js  index.html  style.css
debugger/: agent_utils.py  database.py  debug_db.py  requirements.txt  server.py  test_api.py
debugger/frontend/: index.html
debugger/frontend/src/: App.jsx  index.css
docs/: API.md  ARCHITECTURE.md  DOCUMENTATION.md  RETRIEVAL.md  faqs.md  index.md  roadmap.md
docs/contributing/: code-of-conduct.md  development-setup.md
docs/deployment/: production.md
docs/examples/: advanced_usage.md
docs/facades/: INDEXER.md  NAVIGATOR.md  READER.md  RETRIVER.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: architecture.md  data_model.md  embedding-strategy.md  indexing-pipeline.md  retrieval-strategies.md  source-collector.md
docs/guides/schema/: schema.md
docs/javascripts/: mermaid.js
docs/reference/: embedding.md  indexer.md  models.md  navigation.md  parsing.md  reading.md  retrieval.md  storage.md
docs/testing/: unit-tests-guide.md
examples/advanced_usage/: index.html
faqs/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/architecture/: index.html
guides/data_model/: index.html
guides/embedding-strategy/: index.html
guides/indexing-pipeline/: index.html
guides/retrieval-strategies/: index.html
reference/embedding/: index.html
reference/indexer/: index.html
reference/models/: index.html
reference/navigation/: index.html
reference/parsing/: index.html
reference/reading/: index.html
reference/retrieval/: index.html
reference/storage/: index.html
roadmap/: index.html
scripts/: agent.py  diagnose_alignment.py  notebook.ipynb  notebook_2.ipynb  test_clone_chat_flask.py  test_collision.py  test_dataleak.py  test_debouce_volume.py  test_embedder.py  test_flask.py  test_indexer.py  test_lock.py  test_monkey.py  test_multi_branch.py  test_multi_branch_2.py  test_navigator.py  test_parser.py  test_parser_web.py  test_parser_web_2.py  test_persistence.py  test_reader.py  test_retrieval_assurance.py  test_retrival.py  test_retrival_2.py  test_rogorous.py  test_speedup.py  test_workflow.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/contributing/code-of-conduct/: index.html
site/contributing/development-setup/: index.html
site/deployment/production/: index.html
site/examples/advanced_usage/: index.html
site/faqs/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/guides/architecture/: index.html
site/guides/data_model/: index.html
site/guides/embedding-strategy/: index.html
site/guides/indexing-pipeline/: index.html
site/guides/retrieval-strategies/: index.html
site/reference/embedding/: index.html
site/reference/indexer/: index.html
site/reference/models/: index.html
site/reference/navigation/: index.html
site/reference/parsing/: index.html
site/search/: search_index.json
src/code_graph_indexer/: __init__.py  config.py  indexer.py  models.py  navigator.py  reader.py  retriever.py  schema.py
src/crader/: __init__.py  __main__.py  config.py  indexer.py  manage_db.py  models.py  navigator.py  reader.py  retriever.py  schema.py
tests/: benchmark.py  conftest.py  diagnose_alignment.py  test_embedder.py  test_embedding_provider.py  test_graph_builder.py  test_indexer_helpers.py  test_metadata_provider.py  test_models.py  test_parser.py  test_persistence.py  test_reader.py  test_retrival_2.py  test_scip_indexer.py  test_volume_manager.py  test_workflow.py
tests/e2e/: README.md  test_ingestion_flow.py  test_multi_language_workflows.py  test_pipeline.py  test_user_scenarios.py  test_workflow.py
tests/integration/: README.md  test_connector.py  test_db_constraints.py  test_embedder.py  test_git_interaction.py  test_graph_builder.py  test_navigator.py  test_reader.py  test_real_repo_collection.py  test_retrieval.py  test_scip_indexer.py  test_sqlite_storage.py  test_volume_manager.py  test_workflows.py
tests/unit/: test_cli.py  test_collector_logic.py  test_config.py  test_coverage_boost.py  test_debug_patch.py  test_embedding_provider.py  test_git_volume.py  test_indexer_helpers.py  test_indexer_lifecycle.py  test_manage_db.py  test_metadata_provider.py  test_models.py  test_parser.py  test_parser_unit.py  test_rankers.py  test_schema.py  test_scip_indexer_unit.py  test_storage_postgres.py  test_utils.py
tests_files/: agent.py  asd.ipynb  debug_cli.py  diagnose_alignment.py  notebook.ipynb  test_clone_chat_flask.py  test_collision.py  test_dataleak.py  test_debouce_volume.py  test_embedder.py  test_flask.py  test_lock.py  test_monkey.py  test_parser_web.py  test_reader.py  test_retrival.py  test_retrival_2.py  test_speedup.py  test_workflow.py
tools/: .env.example  dev_setup.sh
tools/debugger/: agent_utils.py  database.py  debug_db.py  docker-compose.yml  requirements.txt  server.py  test_api.py
tools/scripts/: agent.py  diagnose_alignment.py  notebook_2.ipynb  test_clone_chat_flask.py  test_collision.py  test_dataleak.py  test_debouce_volume.py  test_embedder.py  test_flask.py  test_indexer.py  test_lock.py  test_monkey.py  test_multi_branch.py  test_multi_branch_2.py  test_navigator.py  test_parser.py  test_parser_web.py  test_parser_web_2.py  test_persistence.py  test_reader.py  test_retrieval_assurance.py  test_retrival.py  test_retrival_2.py  test_rogorous.py  test_speedup.py  test_workflow.py
(+72 files in other folders)
